--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:wght@500&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body{
-  font-family:'poppins',sans-serif;
+body {
+  font-family: "poppins", sans-serif;
+}
+
+/* Adjust the padding-top value to match the height of your navbar */
+.section {
+  padding-top: 60px; /* Replace 60px with the height of your navbar */
 }
